add profession, photo upload, and social links to  form

--- a/resume_app/templates/resume_app/form.html
+++ b/resume_app/templates/resume_app/form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Create Your Resume</h1>
-    <form method="post" action="{% url 'resume-form' %}">
+    <form method="post" enctype="multipart/form-data" action="{% url 'resume-form' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" name="action" value="preview">Preview Resume</button>
